--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inclass-formik-yup",
+  "name": "stock-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -22,6 +22,7 @@
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
