--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@mui/system": "^6.4.6",
+    "@mui/x-data-grid": "^7.27.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "formik": "^2.4.6",
