--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.20",
+    "@mui/material": "^5.15.14",
     "@mui/system": "^6.4.6",
     "@mui/x-data-grid": "^7.27.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tremor/react": "^3.18.7",
     "axios": "^1.6.2",
     "formik": "^2.4.6",
     "react": "^18.2.0",
@@ -31,6 +32,9 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "tailwindcss": "3.4.17",
     "vite": "^5.0.0"
   }
 }
