--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
