--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.15.14",
+    "@ant-design/icons": "^5.6.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/base": "5.0.0-beta.69",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6",
     "@mui/system": "^6.4.6",
     "@mui/x-data-grid": "^7.27.1",
     "@reduxjs/toolkit": "^2.0.1",
